--- a/recipes/kde-nvidia.yml
+++ b/recipes/kde-nvidia.yml
@@ -1,17 +1,31 @@
 ---
 # yaml-language-server: $schema=https://schema.blue-build.org/recipe-v1.json
+
+#############################
+## Image info & Properties ##
+#############################
+
 name: legion-os-kde-nvidia
 description: This is my personal OS image.
 
-base-image: ghcr.io/ublue-os/silverblue-main
+base-image: ghcr.io/ublue-os/base-nvidia
 image-version: latest
 
+platforms:
+  - linux/amd64
+
+#############
+## Modules ##
+#############
 modules:
+
+## Files Module ##
   - type: files
     files:
       - source: system
         destination: /
 
+## Dnf Module ##
   - type: dnf
     repos:
       copr:
@@ -24,6 +38,7 @@ modules:
         - firefox
         - firefox-langpacks
 
+## Default-flatpaks Module ##
   - type: default-flatpaks
     configurations:
       - notify: false
@@ -33,4 +48,5 @@ modules:
           - org.gnome.Loupe
       - scope: user
 
+## Image Build Modules ##
   - type: signing
